tests/fixtures/invalid/missing-tier.toi
{
  "$toi": "1.0.0",
  "identity": {
    "author": "no tier"
  }
}
